feat(arguments) : modernize argument system